more safari css fix. spacing change

--- a/static/scss/profile.scss
+++ b/static/scss/profile.scss
@@ -54,6 +54,19 @@
     }
 }
 
+.profile-detail-btn {
+    display: flex;
+    justify-content: center;
+
+    &>.row {
+        margin: auto;
+
+        &>div {
+            padding: 0;
+        }
+    }
+}
+
 #profileDetailFollowCont {
     font-size: 12px;
 
@@ -134,6 +147,7 @@ h3 {
     text-align: center;
     display: flex;
     position: relative;
+    padding: 0 20px;
 
     &>.row {
         @media (max-width: $md) {
@@ -151,7 +165,7 @@ h3 {
         height: 200px;
         border-radius: 50%;
         left: 20px;
-        top: -50px;
+        top: -30px;
         background-color: white;
         padding: 10px;
 
